# backend/openapi.yaml
@@ -435,6 +435,101 @@ paths:
         '500':
           description: Internal Server Error
 
+  /api/tag:
+    get:
+      summary: Get all tags
+      operationId: getTag
+      tags:
+        - Tags
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Tag'
+        '500':
+          description: Internal Server Error
+    post:
+      summary: Create a new tag
+      operationId: createTag
+      tags:
+        - Tags
+      requestBody:
+        description: The tag to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Tag'
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tag'
+        '400':
+          description: Bad Request
+        '409':
+          description: Conflict
+        '500':
+          description: Internal Server Error
+  /api/tag/{id}:
+    put:
+      summary: Update a tag by id
+      operationId: updateTagById
+      tags:
+        - Tags
+      parameters:
+        - name: id
+          in: path
+          description: The id of the tag
+          required: true
+          schema:
+            type: number
+      requestBody:
+        description: The tag to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Tag'
+      responses:
+        '204':
+          description: Updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tag'
+        '404':
+          description: Not Found
+        '409':
+          description: Conflict
+        '500':
+          description: Internal Server Error
+    delete:
+      summary: Delete a tag by id
+      operationId: deleteTagById
+      tags:
+        - Tags
+      parameters:
+        - name: id
+          in: path
+          description: The id of the tag
+          required: true
+          schema:
+            type: number
+      responses:
+        '204':
+          description: Deleted
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+
 servers:
   [
     {
@@ -583,3 +678,21 @@ components:
         - isActive
         - packageId
         - creatorId
+    Tag:
+      type: object
+      properties:
+        tagId:
+          type: number
+          description: The id of the tag
+          example: 1
+        englishKeyword:
+          type: string
+          description: The english keyword of the tag
+          example: TypeScript
+        frenchTranslation:
+          type: string
+          description: The french translation of the tag
+          example: TypeScript
+      required:
+        - tagId
+        - englishKeyword
